--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -170,6 +170,10 @@ jobs:
     steps:
       - checkout
       - run:
+          name: add tar utility
+          command: |
+             sudo apt -y install tar gzip
+      - run:
           name: Ensure back-end infrastructure exists
           command: |
             aws cloudformation deploy \
