--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -172,7 +172,7 @@ jobs:
       - run:
           name: add tar utility
           command: |
-             sudo apt -y install tar gzip
+            apk add --update tar gzip
       - run:
           name: Ensure back-end infrastructure exists
           command: |
