--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -19,8 +19,10 @@
 
     - name: "install python for Ansible."
       become: true
-      apt -y update       
-      apt install -y python3
+      apt:
+        name: ["python3"]
+        state: latest
+        update_cache: yes
 
   # Get the environment variables from CircleCI and add to the EC2 instance
   environment:
