--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -262,8 +262,8 @@ jobs:
             echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> "backend/.env"
 
             cd backend
-            npm install
-            npm audit fix --audit-level=critical --force
+          #npm install
+          #npm audit fix --audit-level=critical --force
             npm run migrations > migration_${CIRCLE_WORKFLOW_ID:0:7}.txt
             cat migration_${CIRCLE_WORKFLOW_ID:0:7}.txt
       - run:
