--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -261,9 +261,7 @@ jobs:
             echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> "backend/.env"
             echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> "backend/.env"
 
-            cd backend
-          #npm install
-          #npm audit fix --audit-level=critical --force
+            cd backend #npm install npm audit fix --audit-level=critical --force
             npm run migrations > migration_${CIRCLE_WORKFLOW_ID:0:7}.txt
             cat migration_${CIRCLE_WORKFLOW_ID:0:7}.txt
       - run:
