--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -209,7 +209,7 @@ jobs:
       - persist_to_workspace:
           root: ~/
           paths:
-            - project/.circleci/ansible/inventory.txt
+            - ~/.circleci/ansible/inventory.txt
 
       - destroy-environment:
           workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"      
@@ -222,7 +222,7 @@ jobs:
       - add_ssh_keys:
           fingerprints: ["da:e1:44:8d:ca:99:ff:2d:89:c8:af:1b:83:8c:e4:d4"]
       - attach_workspace:
-          at: ~/
+          at: ~/.circleci/ansible
       - run:
           name: Install dependencies
           command: |
