--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -209,7 +209,7 @@ jobs:
       - persist_to_workspace:
           root: ~/
           paths:
-            - ~/.circleci/ansible/inventory.txt
+            - project/.circleci/ansible/inventory.txt
 
       - destroy-environment:
           workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"      
@@ -222,7 +222,7 @@ jobs:
       - add_ssh_keys:
           fingerprints: ["da:e1:44:8d:ca:99:ff:2d:89:c8:af:1b:83:8c:e4:d4"]
       - attach_workspace:
-          at: ~/.circleci/ansible
+          at: ~/
       - run:
           name: Install dependencies
           command: |
@@ -234,7 +234,10 @@ jobs:
       - run:
           name: Configure server
           command: |
-            cd .circleci/ansible
+            cd ~/project/.circleci/ansible
+            cat inventory.txt
+            echo "\n"
+            cat ~/inventory.txt
             ansible-playbook -i ~/inventory.txt configure-server.yml
       - destroy-environment:
           workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"         
