--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -197,7 +197,8 @@ jobs:
               --filters "Name=tag:project,Values=udapeople-backend" \
               --output text)
 
-            echo "[web]\n"${BACKEND_IP} > ~/project/.circleci/ansible/inventory.txt
+            echo "[web]" > ~/project/.circleci/ansible/inventory.txt
+            echo ${BACKEND_IP} >> ~/project/.circleci/ansible/inventory.txt
             echo "BACKEND IP:"
             echo ${BACKEND_IP}
 
@@ -234,12 +235,8 @@ jobs:
       - run:
           name: Configure server
           command: |
-          
-            #cat ~/project/.circleci/ansible/inventory.txt
-            echo " --- "
             cd ~/project/.circleci/ansible
             cat inventory.txt
-            
             ansible-playbook -i inventory.txt configure-server.yml
       - destroy-environment:
           workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"         
