--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -227,7 +227,7 @@ jobs:
           fingerprints: 
             - "29:1e:ff:d8:28:65:94:02:d9:84:0d:1c:87:d5:3d:09"
       - run:
-          name: Fix ssh Could not resolve hostname
+          name: Fix ssh Permission denied (publickey).
           command: |
             BACKEND_IP=$(curl -H "token: aa9c7a68-e4a1-49c0-a5a5-677faa7ae1d0" --request GET https://api.memstash.io/values/backendip)
             ssh-keyscan ${BACKEND_IP} >> ~/.ssh/known_hosts
@@ -236,7 +236,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add --update ansible openssh-client tar gzip
+            apk add --update ansible openssh-client tar gzip curl
       - run:
           name: Install AWS-CLI
           command: |
