--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -231,12 +231,6 @@ jobs:
           name: Install AWS-CLI
           command: |
             pip install awscli
-      - run:
-          name: Fix ssh Permission denied (publickey).
-          command: |
-            BACKEND_IP=$(curl -H "token: aa9c7a68-e4a1-49c0-a5a5-677faa7ae1d0" --request GET https://api.memstash.io/values/backendip)
-            ssh-keyscan ${BACKEND_IP} >> ~/.ssh/known_hosts
-            cat ~/.ssh/known_hosts 
       - add_ssh_keys:
           fingerprints: 
             - "29:1e:ff:d8:28:65:94:02:d9:84:0d:1c:87:d5:3d:09"
@@ -245,9 +239,13 @@ jobs:
       - run:
           name: Configure server
           command: |
+            echo "------ before ------"
+            cat ~/.ssh/known_hosts
             cd ~/project/.circleci/ansible
             cat inventory.txt
             ansible-playbook -i inventory.txt configure-server.yml
+            echo "------ after ------"
+            cat ~/.ssh/known_hosts
       - destroy-environment:
           workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"         
 
