--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -223,6 +223,11 @@ jobs:
       - image: python:3.7-alpine3.11
     steps:
       - checkout
+      - add_ssh_keys:
+          fingerprints: 
+            - $SSH_KEY	
+      - attach_workspace:
+          at: ~/
       - run:
           name: Install dependencies
           command: |
@@ -230,18 +235,7 @@ jobs:
       - run:
           name: Install AWS-CLI
           command: |
-            pip install awscli      
-      - add_ssh_keys:
-          fingerprints: 
-            - "29:1e:ff:d8:28:65:94:02:d9:84:0d:1c:87:d5:3d:09"
-      - run:
-          name: Fix ssh Permission denied (publickey).
-          command: |
-            BACKEND_IP=$(curl -H "token: aa9c7a68-e4a1-49c0-a5a5-677faa7ae1d0" --request GET https://api.memstash.io/values/backendip)
-            ssh-keyscan -t rsa ${BACKEND_IP} >> ~/.ssh/known_hosts
-            cat ~/.ssh/known_hosts 
-      - attach_workspace:
-          at: ~/
+            pip install awscli   
       - run:
           name: Configure server
           environment: 
@@ -254,6 +248,7 @@ jobs:
             ansible-playbook -i inventory.txt configure-server.yml
             echo "------ after ------"
             cat ~/.ssh/known_hosts
+            echo $SSH_KEY	
       - destroy-environment:
           workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"         
 
