--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -237,10 +237,10 @@ jobs:
           command: |
             pip install awscli   
       - run:
-          name: Fix ssh Permission denied (publickey).
+          name: Add backend (ECDSA) to the list of known hosts.
           command: |
             BACKEND_IP=$(curl -H "token: aa9c7a68-e4a1-49c0-a5a5-677faa7ae1d0" --request GET https://api.memstash.io/values/backendip)
-            ssh-keyscan -H ${BACKEND_IP} >> ~/.ssh/known_hosts
+            ssh-keyscan -Ht ecdsa-sha2-nistp256 ${BACKEND_IP} >> ~/.ssh/known_hosts
             cat ~/.ssh/known_hosts 
       - run:
           name: Configure server
