--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ commands:
           name: Destroy environments
           when: on_fail
           command: |            
-            echo "deleteing s3://udapeople-<< parameters.workflow_id >>"
+            echo "deleteing s3://udapeople-ghfjjg<< parameters.workflow_id >>"
             aws s3 rm "s3://udapeople-<< parameters.workflow_id >>" --recursive
             echo "deleteing udapeople-backend-<< parameters.workflow_id >>"
             aws cloudformation delete-stack --stack-name "udapeople-backend-<< parameters.workflow_id >>"
