--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -393,8 +393,9 @@ jobs:
       - run:
           name: Backend smoke test.
           command: |
-            echo "${API_URL}"
-            if curl "${API_URL}/api/status" | grep "ok"
+            echo ${API_URL}
+            echo ${API_URL}/api/status
+            if curl ${API_URL}/api/status | grep "ok"
             then
                 return 0
             else
