--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -429,6 +429,8 @@ jobs:
             curl -H "Content-Type: text/plain" -H "token: aa9c7a68-e4a1-49c0-a5a5-677faa7ae1d0" --request PUT --data "$OldWorkflowID" https://api.memstash.io/values/oldworkflowid_${CIRCLE_WORKFLOW_ID:0:7}
 
             echo "update Production Stack ..."
+            echo ${CIRCLE_WORKFLOW_ID:0:7}
+            echo "udapeople-${WorkflowID}.s3-website-${AWS_DEFAULT_REGION}.amazonaws.com"
             aws cloudformation deploy \
                     --template-file .circleci/files/cloudfront.yml \
                     --stack-name ProductionStack \
