--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -431,11 +431,14 @@ jobs:
             echo "update Production Stack ..."
             echo ${CIRCLE_WORKFLOW_ID:0:7}
             echo "udapeople-${WorkflowID}.s3-website-${AWS_DEFAULT_REGION}.amazonaws.com"
+            Region=$(aws configure get region )
+            echo $Region
+            echo aws configure get region 
             aws cloudformation deploy \
                     --template-file .circleci/files/cloudfront.yml \
                     --stack-name ProductionStack \
                     --region ${AWS_DEFAULT_REGION} \
-                    --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}  \
+                    --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" AWS_DEFAULT_REGION=$Region  \
                     --tags project=udapeople
       - destroy-environment:
           workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"  
