--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -431,14 +431,14 @@ jobs:
             echo "update Production Stack ..."
             echo ${CIRCLE_WORKFLOW_ID:0:7}
             echo "udapeople-${WorkflowID}.s3-website-${AWS_DEFAULT_REGION}.amazonaws.com"
-            Region=$(aws configure get region --output text)
-            echo $Region
+            AWSRegion=$(aws configure get region --output text)
+            echo $AWSRegion
             echo aws configure get region 
             aws cloudformation deploy \
                     --template-file .circleci/files/cloudfront.yml \
                     --stack-name ProductionStack \
                     --region ${AWS_DEFAULT_REGION} \
-                    --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" AWS_DEFAULT_REGION=$Region  \
+                    --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" AWS_DEFAULT_REGION=$AWSRegion  \
                     --tags project=udapeople
       - destroy-environment:
           workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"  
