--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -430,7 +430,7 @@ jobs:
 
             echo "update Production Stack ..."
             echo ${CIRCLE_WORKFLOW_ID:0:7}
-            echo "udapeople-${WorkflowID}.s3-website-${AWS_DEFAULT_REGION}.amazonaws.com"
+            # echo "udapeople-${WorkflowID}.s3-website-${AWS_DEFAULT_REGION}.amazonaws.com"
             AWSRegion=$(aws configure get region --output text)
             echo $AWSRegion
             echo aws configure get region 
