--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -431,14 +431,14 @@ jobs:
             echo "update Production Stack ..."
             echo ${CIRCLE_WORKFLOW_ID:0:7}
             
-            #AWSRegion=$(aws ec2 describe-availability-zones --output text --query 'AvailabilityZones[0].[RegionName]')
-            #echo $AWSRegion
+            AWSRegion=$(aws ec2 describe-availability-zones --output text --query 'AvailabilityZones[0].[RegionName]')
+            echo $AWSRegion
             
             aws cloudformation deploy \
                     --template-file .circleci/files/cloudfront.yml \
                     --stack-name ProductionStack \
                     --region ${AWS_DEFAULT_REGION} \
-                    --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}",AWSRegion="${AWS_DEFAULT_REGION}"  \
+                    --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}",AWSRegion="${AWSRegion}"  \
                     --tags project=udapeople
       - destroy-environment:
           workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"  
